--- a/public/schedule/week-06/index.html
+++ b/public/schedule/week-06/index.html
@@ -369,8 +369,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Comparing models</td>
-<td>Comparing models</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/12-model-comparison.html">Model comparison</a></td>
+<td>Model comparison</td>
 <td>AE 12</td>
 </tr>
 </tbody>
