--- a/static/slides/12-model-comparison.html
+++ b/static/slides/12-model-comparison.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Maria Tackett" />
     <script src="libs/font-awesome/kePrint/kePrint.js"></script>
-    <link href="libs/font-awesome/lightable/lightable.css" rel="stylesheet" />
     <link rel="stylesheet" href="sta210-slides.css" type="text/css" />
   </head>
   <body>
@@ -23,7 +22,7 @@ class: center, middle, inverse, title-slide
 
 class: middle, center
 
-## [Click here for PDF of slides](12-comparing-models.pdf)
+## [Click here for PDF of slides](12-model-comparison.pdf)
 
 ---
 
