--- a/public/schedule/week-06/index.html
+++ b/public/schedule/week-06/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/12-model-comparison.html">Model comparison</a></td>
-<td>Model comparison</td>
+<td><a href="https://warpwire.duke.edu/w/-4MEAA/">Model comparison</a></td>
 <td>AE 12</td>
 </tr>
 </tbody>
