--- a/public/schedule/week-06/index.html
+++ b/public/schedule/week-06/index.html
@@ -371,7 +371,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/12-model-comparison.html">Model comparison</a></td>
 <td><a href="https://warpwire.duke.edu/w/-4MEAA/">Model comparison</a></td>
-<td>AE 12</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-12-model-comparison.html">AE 12: Model comparison</a></td>
 </tr>
 </tbody>
 </table>
