--- a/public/schedule/week-06/index.html
+++ b/public/schedule/week-06/index.html
@@ -404,7 +404,7 @@ font-size: 18px;
 <td><strong>due Wed, Sep 30</strong></td>
 </tr>
 <tr>
-<td>Lab 05</td>
+<td><a href="https://sta210-fa20.netlify.app/labs/lab-05-tp-consumption.html">Lab 05</a></td>
 <td><strong>due Wed, Sep 30</strong></td>
 </tr>
 </tbody>
