--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -956,15 +956,13 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Sep 24</td>
-            <td style="width:40%;text-align:left">Lab 06</td>
+            <td style="width:40%;text-align:left">Lab 05: Stockpiling toilet paper</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/labs/lab-05-tp-consumption.html">
+                    <i class="far fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
