--- a/public/labs/lab-05-tp-consumption.html
+++ b/public/labs/lab-05-tp-consumption.html
@@ -413,7 +413,7 @@ overflow-x: auto;
 }
 code {
 font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-font-size: 18px;
+font-size: 17px;
 line-height: 1.6;
 }
 pre {
@@ -431,7 +431,7 @@ word-wrap: normal;
 pre.r {
 background-color: #F5F5F5;	
 white-space: inherit;
-font-size: 18px;
+font-size: 17px;
 }
 .marginnote code,
 .sidenote code {
@@ -555,6 +555,8 @@ text-decoration: underline;
 <li><code>public_transport</code>: Local restrictions on public transportation</li>
 <li><code>europe</code>: 1: respondent lives in EU, 0: respondent lives in US/Canada</li>
 <li><code>date_diff_z</code>: Standardized number of days between first reported case in locality and taking the survey</li>
+<li><code>consc</code>: Standardized measure of conscientiousness (organization, diligence, perfectionism, prudence)</li>
+<li><code>open</code>: Standardized measure of openness to experience (aesthetic appreciation, inquisitiveness, creativity, unconventionality)</li>
 </ul>
 </div>
 <div id="exercises" class="section level2">
