--- a/public/labs/lab-05-tp-consumption.html
+++ b/public/labs/lab-05-tp-consumption.html
@@ -555,8 +555,9 @@ text-decoration: underline;
 <li><code>public_transport</code>: Local restrictions on public transportation</li>
 <li><code>europe</code>: 1: respondent lives in EU, 0: respondent lives in US/Canada</li>
 <li><code>date_diff_z</code>: Standardized number of days between first reported case in locality and taking the survey</li>
-<li><code>consc</code>: Standardized measure of conscientiousness (organization, diligence, perfectionism, prudence)</li>
-<li><code>open</code>: Standardized measure of openness to experience (aesthetic appreciation, inquisitiveness, creativity, unconventionality)</li>
+<li><code>consc</code>: Standardized measure of conscientiousness (higher score means stronger traits such as organization, diligence, perfectionism, prudence)</li>
+<li><code>open</code>: Standardized measure of openness to experience (higher score means stronger traits such as aesthetic appreciation, inquisitiveness, creativity, unconventionality)</li>
+<li><code>perceived_threat</code>: Standardized measure of perceived threat of Covid-19 (higher score means greater perceived threat)</li>
 </ul>
 </div>
 <div id="exercises" class="section level2">
@@ -601,6 +602,8 @@ text-decoration: underline;
 <h1>Submission</h1>
 <p>Upload the team’s PDF to Gradescope. Be sure to include every team member’s name in the Gradescope submission Associate the “Overall” graded section with the first page of your PDF, and mark where each answer is to the exercises. If any answer spans multiple pages, then mark all pages.</p>
 <p>There should only be <strong><u>one</u></strong> submission per team on Gradescope. <strong>Be sure to include every team member’s name in the Gradescope submission.</strong></p>
+<hr>
+<p>Click <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0234232#abstract0">here</a> to access the paper, copy of the survey, original data, and other supplemental materials.</p>
 </div>
 
 
