--- a/static/labs/lab-05-tp-consumption.html
+++ b/static/labs/lab-05-tp-consumption.html
@@ -594,7 +594,7 @@ text-decoration: underline;
 <li>Based on <span class="math inline">\(BIC\)</span>, which model better fits the data? Briefly explain.</li>
 </ul></li>
 <li><p>Briefly explain why we didn’t use <span class="math inline">\(R^2\)</span> to choose the model of best fit in the previous question.</p></li>
-<li><p>Select a final model and briefly explain why you selected that model. Use the model to describe the factors that are associated with an increase in of toilet paper rolls.</p></li>
+<li><p>Select a final model and briefly explain why you selected that model. Use the model to describe the factors that are associated with an increase in the number of toilet paper rolls.</p></li>
 </ol>
 </div>
 </div>
