--- a/public/appex/ae-12-model-comparison.html
+++ b/public/appex/ae-12-model-comparison.html
@@ -825,7 +825,8 @@ tidy(orig_model, conf.int = TRUE) %&gt;%
 <ul>
 <li>State the null and alternative hypotheses in words.</li>
 </ul>
-<p><span class="math inline">\(H_0\)</span>: All of the coefficients for Color are 0 <span class="math inline">\(H_a\)</span>: At least one coefficient for Color is not 0</p>
+<p><span class="math inline">\(H_0\)</span>: All of the coefficients for Color are 0</p>
+<p><span class="math inline">\(H_a\)</span>: At least one coefficient for Color is not 0</p>
 <ul>
 <li>Show the code and output for the nested F test.</li>
 </ul></li>
