--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -270,7 +270,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-07/">Week 07</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-07/">Week 07: Model selection &#43; diagnostics</a>
         </div>
     </div>
     
@@ -980,10 +980,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right">Week 07</td>
             <td align="right" style="width:25%;text-align:right">Mon, Sep 28</td>
             <td style="width:40%;text-align:left">MLR: Model selection</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/13-model-selection.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -1054,7 +1053,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Oct 01</td>
-            <td style="width:40%;text-align:left">No lab: Take Quiz 01</td>
+            <td style="width:40%;text-align:left">No lab: Take Quiz 02</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1125,7 +1124,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 08</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 05</td>
-            <td style="width:40%;text-align:left">Statistics experience</td>
+            <td style="width:40%;text-align:left">Odds + odds ratio</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1150,7 +1149,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 07</td>
-            <td style="width:40%;text-align:left">Odds + odds ratio</td>
+            <td style="width:40%;text-align:left">Logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1271,7 +1270,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 10</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 19</td>
-            <td style="width:40%;text-align:left">Logistic: predictions + conditions</td>
+            <td style="width:40%;text-align:left">Logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1296,7 +1295,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 21</td>
-            <td style="width:40%;text-align:left">Logistic regression: inference</td>
+            <td style="width:40%;text-align:left">Logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
