add project to schedule

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1200,6 +1200,29 @@ table tbody tr:nth-child(odd){
             </td>
         </tr>
         <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Fri, Oct 09</td>
+            <td style="width:40%;text-align:left">Projet proposal due</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#project-proposal">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+        </tr>
+        <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 09</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 12</td>
             <td style="width:40%;text-align:left">Statistics experience</td>
@@ -1397,8 +1420,8 @@ table tbody tr:nth-child(odd){
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
-            <td align="right" style="width:25%;text-align:right">Thu, Oct 29</td>
-            <td style="width:40%;text-align:left">Lab 11</td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left">Draft report due</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1415,10 +1438,31 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
             </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#written-report">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Thu, Oct 29</td>
+            <td style="width:40%;text-align:left">Lab: Project peer review</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+                    <i class="fas fa-laptop fa-lg"></i></font>
             </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#peer-review">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
@@ -1519,6 +1563,29 @@ table tbody tr:nth-child(odd){
             </td>
         </tr>
         <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left">Peer review due</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#peer-review">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+        </tr>
+        <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 13</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 09</td>
             <td style="width:40%;text-align:left">Dealing with missing data</td>
@@ -1571,7 +1638,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Nov 12</td>
-            <td style="width:40%;text-align:left">Lab 13</td>
+            <td style="width:40%;text-align:left">Project work day</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1596,7 +1663,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 14</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 16</td>
-            <td style="width:40%;text-align:left">Projects</td>
+            <td style="width:40%;text-align:left">Project work day</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1619,9 +1686,9 @@ table tbody tr:nth-child(odd){
             </td>
         </tr>
         <tr>
-                                 <td align="left" style="width:15%;text-align:right">Week 15</td>
-            <td align="right" style="width:25%;text-align:right"></td>
-            <td style="width:40%;text-align:left">Project presentations</td>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Tue, Nov 17</td>
+            <td style="width:40%;text-align:left">Final report due</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1638,10 +1705,54 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
             </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#written-report">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Fri, Nov 20</td>
+            <td style="width:40%;text-align:left">Video + slides + repo due</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+                    <i class="fas fa-laptop fa-lg"></i></font>
             </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#presentation-slides">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right">Week 15</td>
+            <td align="right" style="width:25%;text-align:right">Sun, Nov 22</td>
+            <td style="width:40%;text-align:left">Presentation comments due</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/project/#video-presentation">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
         </tr> 
 </table>
 
