--- a/public/project/index.html
+++ b/public/project/index.html
@@ -241,7 +241,7 @@ table tbody tr:nth-child(odd){
 <p>Peer feedback due <strong>Thursday, November 5</strong></p>
 <p>Final report due <strong>Tuesday, November 17</strong></p>
 <p>Presentation video, slides, repo due <strong>Friday, November 20</strong></p>
-<p>Presentation comments due <strong>Sunday, November 21</strong></p>
+<p>Presentation comments due <strong>Sunday, November 22</strong></p>
 <h2 id="introduction">Introduction</h2>
 <p><strong>TL;DR</strong>: <em>Pick a dataset and do a regression analysis. That is your
 final project.</em></p>
@@ -287,7 +287,7 @@ final project.</em></p>
 <td>20 pts</td>
 </tr>
 <tr>
-<td><strong>Peer feedback</strong></td>
+<td><strong>Peer review</strong></td>
 <td>15 pts</td>
 </tr>
 </tbody>
@@ -422,16 +422,17 @@ exactly upon knitting.</p>
 <h3 id="discussion">Discussion</h3>
 <p>This section is a conclusion and discussion. This will require a
 summary of what you have learned about your research question along with statistical arguments supporting your conclusions. Also, critique your own methods and provide suggestions for improving your analysis. Issues pertaining to the reliability and validity of your data and appropriateness of the statistical analysis should also be discussed here. Includ 1 - 2 paragraphs on what you would do differently if you were able to start over with the project or what you would do next if you were going to continue work on the project should also be included.</p>
-<h2 id="peer-feedback">Peer feedback</h2>
+<h2 id="peer-review">Peer review</h2>
 <p>Critically reviewing others&rsquo; work is a crucial part of the scientific process, and STA 199 is no exception. You will be assigned a team to review. As part of the review process, you must provide your partner team a copy of your current report by <strong>Wednesday, October 28</strong>. After giving the report to your partner team, they will have until <strong>Friday, November 5</strong> to provide a detailed critique about the written report and data analysis. This feedback is intended to help you create a high quality final project, as well as give you experience
 reading and constructively critiquing the work of others.</p>
-<p>During the peer feedback process, you will be provided read-only access to your  partner team&rsquo;s GitHub repo. Provide your feedback in the form of GitHub issues to your partner team&rsquo;s GitHub repo.</p>
-<p>Peer feedback will be graded on the extent to which it comprehensively and constructively addresses the components of the partner team&rsquo;s report: the  research context and motivation, exploratory data analysis, and any inference, modeling, or conclusions. You must have at least some of these results available for your partner team to review.</p>
+<p>During the peer review process, you will be provided read-only access to your  partner team&rsquo;s GitHub repo. Provide your review in the form of GitHub issues to your partner team&rsquo;s GitHub repo.</p>
+<p>Peer review will be graded on the extent to which it comprehensively and constructively addresses the components of the partner team&rsquo;s report: the  research context and motivation, exploratory data analysis, and any inference, modeling, or conclusions. You must have at least some of these results available for your partner team to review.</p>
+<p>The final report is due on <strong>Tuesday, November 17.</strong></p>
 <h2 id="presentation-slides">Presentation Slides</h2>
 <p>In addition to the write-up, your team must also create presentation
-slides that summarize and showcase your project. Introduce your research question and dataset, showcase visualizations, and provide some conclusions. These slides should serve as a brief visual accompaniment to your write-up and will be graded for content and quality. For submission, convert these slides to a .pdf document to be submitted to Gradescope. The slides are due on <strong>Tuesday, November 17</strong>.</p>
+slides that summarize and showcase your project. Introduce your research question and dataset, showcase visualizations, and provide some conclusions. These slides should serve as a brief visual accompaniment to your write-up and will be graded for content and quality. For submission, convert these slides to a .pdf document to be submitted to Gradescope. The slides are due on <strong>Friday, November 20</strong>.</p>
 <h2 id="video-presentation">Video presentation</h2>
-<p>Sometime before <strong>Tuesday, November 17</strong>, you/your group will upload a video presentation of your project to Warpwire. Note that all members must present, and that a ten-minute time limit is <strong>strictly enforced</strong>.</p>
+<p>Sometime before <strong>Friday, November 20</strong>, you/your group will upload a video presentation of your project to Warpwire. Note that all members must present, and that a ten-minute time limit is <strong>strictly enforced</strong>.</p>
 <p>For the presentation, you can speak over your slide deck, similar to the lecture content videos. I recommend using Zoom to record your presentation; however, you can use whatever platform works best for your group. Below are a few resources to help you record video presentations:</p>
 <ul>
 <li><a href="https://kb.siue.edu/61721">Recording presentations in Zoom</a></li>
@@ -459,7 +460,7 @@ for relevant variables</li>
 <li>Presentation (if using Keynote/PowerPoint/Google Slides, export to PDF and put in repo, in a <code>/presentation</code> folder)</li>
 </ul>
 <p>Style and format does count for this assignment, so please take the time to make sure everything looks good and your data and code are properly formatted.</p>
-<p>The repository must be finalized by <strong>Tuesday, November 17</strong>.</p>
+<p>The repository must be finalized by <strong>Friday, November 20</strong>.</p>
 <h2 id="peer-teamwork-evaluation">Peer teamwork evaluation</h2>
 <p>You will be asked to fill out a survey where you rate the contribution and teamwork of each team member by assigning a contribution percentage for each team member. Filling out the survey is a prerequisite for getting credit on the team member evaluation. If you are suggesting that an individual did less than  half the expected contribution given your team size (e.g., for a team of four students, if a student contributed less than 12.5% of the total effort), please
 provide some explanation. If any individual gets an average peer score
@@ -541,7 +542,7 @@ of results is unclear.</li>
     <li><a href="#data-sources">Data sources</a></li>
     <li><a href="#project-proposal">Project proposal</a></li>
     <li><a href="#written-report">Written report</a></li>
-    <li><a href="#peer-feedback">Peer feedback</a></li>
+    <li><a href="#peer-review">Peer review</a></li>
     <li><a href="#presentation-slides">Presentation Slides</a></li>
     <li><a href="#video-presentation">Video presentation</a></li>
     <li><a href="#project-repository">Project repository</a></li>
