updates for today

--- a/public/schedule/week-07/index.html
+++ b/public/schedule/week-07/index.html
@@ -342,6 +342,7 @@ table tbody tr:nth-child(odd){
     <li><a href="#lectures">Lectures</a></li>
     <li><a href="#readings">Readings</a></li>
     <li><a href="#assignments">Assignments</a></li>
+    <li><a href="#announcements">Announcements</a></li>
   </ul>
 </nav></div>
         </div>
@@ -369,7 +370,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/13-model-selection.html">Model selection</a></td>
 <td><a href="https://warpwire.duke.edu/w/g4oEAA/">Model selection</a></td>
-<td>AE 13</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-13-model-selection.html">AE 13: Model selection</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
@@ -403,8 +404,20 @@ font-size: 18px;
 <td><a href="https://sta210-fa20.netlify.app/quiz/quiz-02.html">Quiz 02</a></td>
 <td>Oct 1 - 2</td>
 </tr>
+<tr>
+<td><a href="https://sta210-fa20.netlify.app/project/#project-proposal">Project proposal</a></td>
+<td><strong>due Oct 09</strong></td>
+</tr>
 </tbody>
 </table>
+<h2 id="announcements">Announcements&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#announcements">🔗&#xFE0E;</a> </h2>
+<p>Hang out with the TAs from STA 210! This is a casual conversation and a fun opportunity to meet the members of the STA 210 teaching team. The only rule is these can&rsquo;t turn into office hours!</p>
+<p>Tea with a TA counts as a statistics experience.</p>
+<p><strong>Upcoming teas</strong>:</p>
+<p><strong>Betsy Bersson</strong>, Wed, Oct 7, 9:30 - 10:30 am</p>
+<ul>
+<li><a href="https://forms.gle/naEn88fnJDEZhdVL7">Click here</a> to sign up. Zoom details will be emailed before the event.</li>
+</ul>
 
 
       </div>
