--- a/public/schedule/week-07/index.html
+++ b/public/schedule/week-07/index.html
@@ -374,14 +374,14 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Model conditions</td>
-<td>Model conditions</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/14-model-diagnostics.html">Model diagnostics</a></td>
+<td><a href="https://warpwire.duke.edu/w/2Y4EAA/">Model diagnostics</a></td>
 <td>AE 14</td>
 </tr>
 <tr>
 <td></td>
-<td>Model diagnostics</td>
-<td>Model diagnostics</td>
+<td>Model conditions</td>
+<td>No video</td>
 <td></td>
 </tr>
 </tbody>
