--- a/public/schedule/week-07/index.html
+++ b/public/schedule/week-07/index.html
@@ -380,7 +380,7 @@ font-size: 18px;
 </tr>
 <tr>
 <td></td>
-<td>Model conditions</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/14-mlr-conditions.html">Checkin conditions for MLR</a></td>
 <td>No video</td>
 <td></td>
 </tr>
