link to Betsy's website.

--- a/public/schedule/week-07/index.html
+++ b/public/schedule/week-07/index.html
@@ -414,7 +414,7 @@ font-size: 18px;
 <p>Hang out with the TAs from STA 210! This is a casual conversation and a fun opportunity to meet the members of the STA 210 teaching team. The only rule is these can&rsquo;t turn into office hours!</p>
 <p>Tea with a TA counts as a statistics experience.</p>
 <p><strong>Upcoming teas</strong>:</p>
-<p><strong>Betsy Bersson</strong>, Wed, Oct 7, 9:30 - 10:30 am</p>
+<p><strong><a href="https://www.linkedin.com/in/betsy-bersson-37171570/">Betsy Bersson</a></strong>, Wed, Oct 7, 9:30 - 10:30 am</p>
 <ul>
 <li><a href="https://forms.gle/naEn88fnJDEZhdVL7">Click here</a> to sign up. Zoom details will be emailed before the event.</li>
 </ul>
