--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -280,7 +280,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-08/">Week 08</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-08/">Week 08: Logistic regression</a>
         </div>
     </div>
     
@@ -1127,11 +1127,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 08</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 05</td>
-            <td style="width:40%;text-align:left">Odds + odds ratio</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Logistic: Odds + probabilities</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/15-logistic-odds.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -1152,7 +1151,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 07</td>
-            <td style="width:40%;text-align:left">Logistic regression</td>
+            <td style="width:40%;text-align:left">Logistic: Coefficients</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1161,8 +1160,10 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-aign:center"><a href="/hw/hw-05.html">
-                    <i class="fas fa-edit fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
@@ -1257,7 +1258,7 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-aign:center"><a href="/hw/hw-06.html">
+            <td align="center" style="width:10%;text-aign:center"><a href="/hw/hw-05.html">
                     <i class="fas fa-edit fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
