add tea with TA

--- a/public/schedule/week-08/index.html
+++ b/public/schedule/week-08/index.html
@@ -423,9 +423,13 @@ font-size: 18px;
 <p>Hang out with the TAs from STA 210! This is a casual conversation and a fun opportunity to meet the members of the STA 210 teaching team. The only rule is these can&rsquo;t turn into office hours!</p>
 <p>Tea with a TA counts as a statistics experience.</p>
 <p><strong>Upcoming teas</strong>:</p>
-<p><strong><a href="https://www.linkedin.com/in/betsy-bersson-37171570/">Betsy Bersson</a></strong>, Wed, Oct 7, 9:30 - 10:30 am</p>
+<p><a href="https://www.linkedin.com/in/betsy-bersson-37171570/"><strong>Betsy Bersson</strong></a>, Wed, Oct 7, 9:30 - 10:30 am</p>
 <ul>
 <li><a href="https://forms.gle/naEn88fnJDEZhdVL7">Click here</a> to sign up. Zoom details will be emailed before the event.</li>
+</ul>
+<p><a href="http://linkedin.com/in/emily-tallman"><strong>Emily Tallman</strong></a>, Thu, Oct 15 11a - 12p</p>
+<ul>
+<li><a href="https://forms.gle/fZANces6Qw1gpwcc6">Click here</a></li>
 </ul>
 
 
