--- a/public/schedule/week-08/index.html
+++ b/public/schedule/week-08/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/15-logistic-odds.html">Odds + probabilities</a></td>
 <td><a href="https://warpwire.duke.edu/w/WZQEAA/">Odds + probabilities</a></td>
-<td>AE 15</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-15-odds.html">AE 15: Risk of heart disease</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
