add lec 16 slides

--- a/public/schedule/week-08/index.html
+++ b/public/schedule/week-08/index.html
@@ -374,8 +374,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Logistic regression: Coefficients + odds ratios</td>
-<td>Logistic regression: Coefficients + odds ratios</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/16-logistic-odds-ratios.html">Logistic regression: Odds ratios</a></td>
+<td>Logistic regression: Odds ratios</td>
 <td>AE 16</td>
 </tr>
 </tbody>
