add lec 16 video

--- a/public/schedule/week-08/index.html
+++ b/public/schedule/week-08/index.html
@@ -375,13 +375,12 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/16-logistic-odds-ratios.html">Logistic regression: Odds ratios</a></td>
-<td>Logistic regression: Odds ratios</td>
+<td><a href="https://warpwire.duke.edu/w/RZgEAA/">Logistic regression: Odds ratios</a></td>
 <td>AE 16</td>
 </tr>
 </tbody>
 </table>
 <h2 id="readings">Readings&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#readings">🔗&#xFE0E;</a> </h2>
-<p>None.</p>
 <table>
 <thead>
 <tr>
@@ -412,10 +411,6 @@ font-size: 18px;
 <tr>
 <td><a href="https://sta210-fa20.netlify.app/project/#project-proposal">Project proposal</a></td>
 <td><strong>due Oct 09</strong></td>
-</tr>
-<tr>
-<td>Lab 06</td>
-<td><strong>due Oct 14</strong></td>
 </tr>
 </tbody>
 </table>
