--- a/public/slides/16-logistic-odds-ratios.html
+++ b/public/slides/16-logistic-odds-ratios.html
@@ -343,7 +343,7 @@ risk_model_3 &lt;- glm(high_risk ~ education + age,
 
 ---
 
-## Interpretation in terms of the log-odds
+## Interpretation in terms of the odds
 
 
 
@@ -360,7 +360,7 @@ risk_model_3 &lt;- glm(high_risk ~ education + age,
 
 ---
 
-## Interpretation in terms of the log-odds
+## Interpretation in terms of the odds
 
 
 
