--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1175,7 +1175,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Oct 08</td>
-            <td style="width:40%;text-align:left">Lab 08</td>
+            <td style="width:40%;text-align:left">Lab: Project proposal work day</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1271,7 +1271,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Oct 15</td>
-            <td style="width:40%;text-align:left">Lab 09</td>
+            <td style="width:40%;text-align:left">Lab 06</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1346,7 +1346,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Oct 22</td>
-            <td style="width:40%;text-align:left">Lab 10</td>
+            <td style="width:40%;text-align:left">Lab 07</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1540,7 +1540,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Nov 05</td>
-            <td style="width:40%;text-align:left">Lab 12</td>
+            <td style="width:40%;text-align:left">Lab 08</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1636,7 +1636,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Nov 12</td>
-            <td style="width:40%;text-align:left">Project work day</td>
+            <td style="width:40%;text-align:left">Lab: Project work day</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1661,7 +1661,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 14</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 16</td>
-            <td style="width:40%;text-align:left">Project work day</td>
+            <td style="width:40%;text-align:left">Project meetings</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
